Update codebase (part 1)
The mod actually runs now. Nothing is functional yet though.